# open-rl

./: .gitignore  Makefile  README.md  README.prev.md  design.md  design_arch.mmd  designer.md  ruff.toml  task.md  tinker-cookbook
.github/workflows/: build-and-push.yml  build-pr.yml  e2e-piglatin.yml  lint.yml
assets/: architecture.mmd  design_arch.mmd  distributed_arch.mmd  rollout_flow.mmd
client/: .gitignore  Dockerfile  README.md  cli.py  functiongemma_sft.py  piglatin_data.json  piglatin_sft.py  piglatin_sft_notebook.ipynb  plot_logs.py  plot_metrics.py  plot_simple_rl.py  print_rewards.py  pyproject.toml  rlvr.py  sft.py  showcase_rlvr.py  test_basic_workflow.py  test_binary_rl.py  test_countdown_rl.py  test_eval.py  test_guess_rl.py  test_joke_rl.py  test_race.py  test_rl_workflow.py  test_rlvr_notebook.py  test_simple_rl.py  texttosql_gemma4_plain_notebook.ipynb  texttosql_sft.py  texttosql_sft_notebook.ipynb  verify_ppo.py
client/kubernetes/: rlvr-job.yaml
client/tests/: _server_fixture.py  test_piglatin_gemma.py  test_piglatin_qwen.py
dev/infra/: gen_gcp_ssh_config.py  prepare_vm.sh
dev/monitoring/: apply_dashboard.sh  openrl-performance.dashboard.json
dev/tools/: cli.py  plot_logs.py  plot_metrics.py  pyproject.toml
docs/: architecture.md  configuration.md  deployment.md  function-gemma-guide.md  getting-started-uv.md  rl_concepts.md  tinker-client-compatibility.md
docs/blog/: from-mac-to-gke.md
docs/guides/: cli-tool.md
docs/guides/reinforcement-learning/: rlvr.md
docs/guides/supervised/: function-gemma.md  pig-latin.md
examples/: README.md  pyproject.toml
examples/rl/: verify_ppo.py
examples/rl/rlvr/: README.md  rlvr-job-parallel.yaml  rlvr-job.yaml  rlvr.py
examples/rl/text-to-sql/: README.md  texttosql_sft_grpo.py
examples/rl/text-to-sql/utils/: __init__.py  helpers.py  plot.py  rewards.py  sanity_check.py
examples/rl/tinker-rl-basic/: tinker-rl-basic-job-2.yaml  tinker-rl-basic-job-3.yaml  tinker-rl-basic-job.yaml
examples/sft/function-gemma/: README.md  functiongemma_sft.py
examples/sft/hello-world/: README.md  sft.py
examples/sft/pig-latin/: README.md  piglatin_data.json  piglatin_sft.py  piglatin_sft_notebook.ipynb
examples/sft/pig-latin/tests/: _server_fixture.py  test_piglatin_gemma.py  test_piglatin_qwen.py
examples/sft/text-to-sql/: README.md  texttosql_sft.py  texttosql_sft_notebook.ipynb
examples/tests/: _server_fixture.py  tinker_client_compat.py
k8s/deploy/distributed-lustre/: 04-gateway.yaml  kustomization.yaml
k8s/deploy/distributed-shared/: 02-redis.yaml  04-gateway.yaml  kustomization.yaml
k8s/deploy/single-process-gke/: 01-pvc.yaml  03-service.yaml  04-deployment.yaml
scripts/: gen_gcp_ssh_config.py
server/: Dockerfile  Dockerfile.gateway  README.md  pyproject.toml
server/kubernetes/distributed-lustre/: 01-lustre-pvc.yaml  02-redis.yaml  03-vllm.yaml  04-gateway.yaml  05-trainer-worker.yaml  kustomization.yaml
server/kubernetes/distributed-shared/: 01-shared-pvc.yaml  03-vllm.yaml  04-gateway.yaml  05-trainer-worker.yaml  kustomization.yaml
server/kubernetes/single-process-gke/: 02-serviceaccount.yaml  04-deployment.yaml  kustomization.yaml
server/src/: broker.py  clock_cycle.py  engine.py  gateway.py  main.py  state.py  store.py  trainer.py  vllm_sampler.py  vllm_worker.py
server/src/trainer/: engine.py
spec/: design.md  questions.md
src/server/: Dockerfile  Dockerfile.gateway  clock_cycle.py  gateway.py  pyproject.toml  store.py  trainer.py  vllm_sampler.py
src/server/scripts/: patch_vllm_lora_dedup.py
tests/: __init__.py  _server_fixture.py  test_piglatin_gemma.py  test_piglatin_qwen.py  tinker_client_compat.py
