[project]
name = "client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2",
    "matplotlib>=3.10.8",
    "requests>=2.32.5",
    "tinker>=0.12.0",
    "transformers>=5.1.0",
    "datasets>=4.5.0",
    "huggingface_hub>=0.28.1",
    "opentelemetry-instrumentation-httpx>=0.61b0",
    "opentelemetry-exporter-gcp-trace>=1.11.0",
    "opentelemetry-sdk>=1.40.0",
]

[tool.setuptools]
packages = []
py-modules = ["cli", "sft", "rlvr", "functiongemma_sft", "verify_ppo", "plot_metrics", "plot_logs"]
