[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "open-rl-client"
version = "0.1.0"
description = "Open-RL client: CLI and shared utilities for talking to an Open-RL server."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chz>=0.4.0",
    "jinja2",
    "matplotlib>=3.10.8",
    "orjson>=3.11.8",
    "requests>=2.32.5",
    "tinker==0.18.1",
    "tinker_cookbook",
    "datasets>=4.5.0",
    "huggingface_hub>=0.28.1",
    "opentelemetry-instrumentation-httpx>=0.61b0",
    "opentelemetry-exporter-gcp-trace>=1.11.0",
    "opentelemetry-sdk>=1.40.0",
    "transformers>=5.5.4",
    "ipykernel",
    "torch",
]

# Use the CPU torch wheel — the client only needs torch transitively (via
# transformers' AutoTokenizer) and never runs model code, so the ~2 GB CUDA
# build is wasted download time.
[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "torch-cpu" }

[tool.setuptools]
packages = []
