[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "open-rl-tools"
version = "0.1.0"
description = "Open-RL developer tools: CLI and plotting scripts."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "requests>=2.32.5",
    "pandas>=2.2.0",
    "transformers>=4.0.0",
    "jinja2>=3.0.0",
]

[project.scripts]
open-rl = "cli:main"

[tool.setuptools]
packages = []
py-modules = ["cli", "plot_metrics", "plot_logs"]
